# hnsw_practice

./: .gitignore  README.md  analize.py  make_index.py  pyproject.toml  search.py  utils.py
tools/: combinations_make_index.sh  combinations_search.sh  prepare_csv.sh  run.sh  setup.sh  start.sh
