[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["MiniDan21 <molchanov_danilka00@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
hnswlib = "0.8.0"
black = "^24.10.0"
pytest = "^8.3.4"
rasterio = "^1.4.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
